force-app/main/default/objects/Workstream__c/fields/Actual_BW_Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Actual_BW_Hours_Spent__c</fullName>
    <inlineHelpText>Used to note how many BW hours were spent on the project after final deployment/testing are completed.</inlineHelpText>
    <label>BW Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>