force-app/main/default/objects/Workstream__c/fields/Actual_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Actual_Estimated__c</fullName>
    <formula>Actual_BW_Hours_Spent__c - Value(Estimated_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual - Estimated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>