force-app/main/default/objects/Workstream__c/fields/Alternate_Flow_s__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Flow_s__c</fullName>
    <defaultValue>&quot;Step # - Actor - Action - System Response - Screen - Returns to Process at #&quot;</defaultValue>
    <label>Alternate Flow(s)</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>