force-app/main/default/objects/Workstream__c/fields/Bluewolf_POC__c.field-meta.xml
<CustomField>
    <fullName>Bluewolf_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary POC at Bluewolf</inlineHelpText>
    <label>Bluewolf POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>IssuesBWcontact</relationshipName>
    <type>Lookup</type>
</CustomField>