force-app/main/default/objects/Workstream__c/fields/BW_Max_Hrs__c.field-meta.xml
<CustomField>
    <fullName>BW_Max_Hrs__c</fullName>
    <label>BW Max Hrs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>