force-app/main/default/objects/Workstream__c/fields/Current_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Notes__c</fullName>
    <label>Current Status Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>