force-app/main/default/objects/Workstream__c/fields/Date_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Date_Deployment__c</fullName>
    <label>Date Deployed</label>
    <type>Date</type>
</CustomField>