force-app/main/default/objects/Workstream__c/fields/date_estimated_for_testing__c.field-meta.xml
<CustomField>
    <fullName>date_estimated_for_testing__c</fullName>
    <inlineHelpText>Ready this functionality is estimated to be ready for testing by UWW.</inlineHelpText>
    <label>Date for Veritiv Testing</label>
    <type>Date</type>
</CustomField>