force-app/main/default/objects/Workstream__c/fields/Date_of_Update__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Update__c</fullName>
    <label>Date of Next Update</label>
    <type>Date</type>
</CustomField>