force-app/main/default/objects/Workstream__c/fields/Date_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Reported__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>