force-app/main/default/objects/Workstream__c/fields/Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolved__c</fullName>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>