force-app/main/default/objects/Workstream__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&quot;The purpose of this functionality is to&quot;</defaultValue>
    <label>Description</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>