force-app/main/default/objects/Workstream__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <label>BW Estimated Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>