force-app/main/default/objects/Workstream__c/fields/Historical_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Historical_Status_Notes__c</fullName>
    <label>Historical Status Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>