force-app/main/default/objects/Workstream__c/fields/Internal_POC__c.field-meta.xml
<CustomField>
    <fullName>Internal_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Veritiv POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Workstreams (Internal POC)</relationshipLabel>
    <relationshipName>IssuesInternalContact</relationshipName>
    <type>Lookup</type>
</CustomField>