force-app/main/default/objects/Workstream__c/fields/Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Issue_Number__c</fullName>
    <displayFormat>{YY}{000}</displayFormat>
    <label>Issue #</label>
    <type>AutoNumber</type>
</CustomField>