force-app/main/default/objects/Workstream__c/fields/Original_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Original_Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The UWW/BW contact who identified the issue originally.</inlineHelpText>
    <label>Original Reporter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>