force-app/main/default/objects/Workstream__c/fields/Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow__c</fullName>
    <defaultValue>&quot;Step # - Actor - Action - System Response - Screen - Alternate/Exception&quot;</defaultValue>
    <label>Process Flow</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>