force-app/main/default/objects/Workstream__c/fields/Related_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Related_Link_1__c</fullName>
    <label>Related Link 1</label>
    <type>Url</type>
</CustomField>