force-app/main/default/objects/Workstream__c/fields/Related_Link_2__c.field-meta.xml
<CustomField>
    <fullName>Related_Link_2__c</fullName>
    <label>Related Link 2</label>
    <type>Url</type>
</CustomField>