force-app/main/default/objects/Workstream__c/fields/Related_Link_3__c.field-meta.xml
<CustomField>
    <fullName>Related_Link_3__c</fullName>
    <label>Related Link 3</label>
    <type>Url</type>
</CustomField>