force-app/main/default/objects/Workstream__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <inlineHelpText>The Request this issue is associated with.</inlineHelpText>
    <label>Request</label>
    <referenceTo>SFDC_Request__c</referenceTo>
    <relationshipName>Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>