force-app/main/default/objects/Workstream__c/fields/Requires_Predeploy__c.field-meta.xml
<CustomField>
    <fullName>Requires_Predeploy__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Predeploy?</label>
    <type>Checkbox</type>
</CustomField>