force-app/main/default/objects/Workstream__c/fields/Requires_Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Requires_Test_Script__c</fullName>
    <label>Requires Test Script?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Req&apos;d - Not Started</fullName>
            </value>
            <value>
                <fullName>Req&apos;d - In Progress</fullName>
            </value>
            <value>
                <fullName>Req&apos;d - Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>