force-app/main/default/objects/Workstream__c/fields/Requires_Translation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Translation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Translation?</label>
    <type>Checkbox</type>
</CustomField>