force-app/main/default/objects/Workstream__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select &quot;Bluewolf OpenSupport&quot; to send this issue to Bluewolf.</inlineHelpText>
    <label>Responsible Party</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>