force-app/main/default/objects/Workstream__c/fields/Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Sandbox__c</fullName>
    <description>The development sandbox  being used.</description>
    <inlineHelpText>Please enter which development sandbox is being used.
.dev, or .al, .test, for example.  When it goes into production, enter Production</inlineHelpText>
    <label>Sandbox</label>
    <length>25</length>
    <type>Text</type>
</CustomField>