force-app/main/default/objects/Workstream__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical - Loss of Functionality</fullName>
            </value>
            <value>
                <fullName>Need to Have</fullName>
            </value>
            <value>
                <fullName>Nice to Have / Enhancement Req</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>