force-app/main/default/objects/Workstream__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Bluewolf will only receive an email notification when the Status = 2 - Investigating and Scoping</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Reported</fullName>
                <default>true</default>
                <label>1 - Reported</label>
            </value>
            <value>
                <fullName>2 - Investigating/Scoping</fullName>
            </value>
            <value>
                <fullName>3 - Fix in Progress</fullName>
            </value>
            <value>
                <fullName>4 - Testing</fullName>
            </value>
            <value>
                <fullName>7 - Awaiting Deployment</fullName>
            </value>
            <value>
                <fullName>8 - Promoted</fullName>
            </value>
            <value>
                <fullName>10 - Resolved</fullName>
            </value>
            <value>
                <fullName>86 - Requirement Canceled</fullName>
            </value>
            <value>
                <fullName>97 - Wish List / Enhancement Tracking</fullName>
            </value>
            <value>
                <fullName>98 - Merged</fullName>
            </value>
            <value>
                <fullName>99 - Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>