force-app/main/default/objects/Workstream__c/fields/Technical_Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Technical_Process_Flow__c</fullName>
    <label>Technical Process Flow</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>