force-app/main/default/objects/Workstream__c/fields/Test_Scripts__c.field-meta.xml
<CustomField>
    <fullName>Test_Scripts__c</fullName>
    <label>Test Scripts</label>
    <type>Url</type>
</CustomField>