force-app/main/default/objects/Workstream__c/fields/Testing_Oddities__c.field-meta.xml
<CustomField>
    <fullName>Testing_Oddities__c</fullName>
    <description>Enter any special instructions for testing, and unusual circumstances to test for.</description>
    <inlineHelpText>Enter any special instructions for testing, and unusual circumstances to test for.</inlineHelpText>
    <label>Testing Oddities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>