force-app/main/default/objects/Workstream__c/fields/Testing_Status__c.field-meta.xml
<CustomField>
    <fullName>Testing_Status__c</fullName>
    <inlineHelpText>Used denote testing progress.</inlineHelpText>
    <label>Testing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - BW - FAIL</fullName>
            </value>
            <value>
                <fullName>2 - BW - PASS</fullName>
            </value>
            <value>
                <fullName>3 - Veritiv - FAIL</fullName>
            </value>
            <value>
                <fullName>4 - Veritiv - PASS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>