force-app/main/default/objects/Workstream__c/fields/Waiting_on_Other_Party__c.field-meta.xml
<CustomField>
    <fullName>Waiting_on_Other_Party__c</fullName>
    <label>Waiting on Other Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Warehouse</fullName>
            </value>
            <value>
                <fullName>Other System</fullName>
            </value>
            <value>
                <fullName>Premier Support</fullName>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>