force-app/main/default/objects/Workstream__c/validationRules/Require_Date_Deployed_when_Promoted.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Date_Deployed_when_Promoted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;8 - Promoted&quot;),
ISBLANK( Date_Deployment__c)
)</errorConditionFormula>
    <errorMessage>You must enter the Date Deployed when the Workstream is Promoted</errorMessage>
</ValidationRule>