force-app/main/default/objects/Workstream__c/listViews/Active_Monitoring_Issues.listView-meta.xml
<ListView>
    <fullName>Active_Monitoring_Issues</fullName>
    <columns>Responsible_Party__c</columns>
    <columns>NAME</columns>
    <columns>Primary_Object__c</columns>
    <columns>Status__c</columns>
    <columns>Severity__c</columns>
    <columns>Priority__c</columns>
    <columns>Date_Deployment__c</columns>
    <columns>Date_of_Update__c</columns>
    <columns>Date_Reported__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>10 - Resolved,98 - Merged,86 - Requirement Canceled</value>
    </filters>
    <label>Active &amp; Monitoring Issues</label>
    <language>en_US</language>
</ListView>