force-app/main/default/objects/Workstream__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Issue_Number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Reported__c</columns>
    <columns>Date_Resolved__c</columns>
    <columns>Responsible_Party__c</columns>
    <columns>Request__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>