force-app/main/default/objects/Workstream__c/listViews/Angie_s_Open_Workstreams.listView-meta.xml
<ListView>
    <fullName>Angie_s_Open_Workstreams</fullName>
    <booleanFilter>(1 OR 2) AND (3 OR 4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Responsible_Party__c</columns>
    <columns>Internal_POC__c</columns>
    <columns>Original_Reporter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>1 - Reported,2 - Investigating/Scoping,3 - Fix in Progress,4 - Testing</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>7 - Awaiting Deployment,8 - Promoted</value>
    </filters>
    <filters>
        <field>Responsible_Party__c</field>
        <operation>equals</operation>
        <value>Angie Lasher</value>
    </filters>
    <filters>
        <field>Internal_POC__c</field>
        <operation>equals</operation>
        <value>Angie Lasher</value>
    </filters>
    <filters>
        <field>Original_Reporter__c</field>
        <operation>equals</operation>
        <value>Angie Lasher</value>
    </filters>
    <label>Angie&apos;s Open Workstreams</label>
    <language>en_US</language>
</ListView>