force-app/main/default/objects/Workstream__c/listViews/My_Issues.listView-meta.xml
<ListView>
    <fullName>My_Issues</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Current_Status_Notes__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>10 - Resolved,86 - Requirement Canceled,98 - Merged</value>
    </filters>
    <label>My Issues</label>
    <language>en_US</language>
</ListView>