force-app/main/default/objects/Workstream__c/listViews/Open_Sandbox_Issues.listView-meta.xml
<ListView>
    <fullName>Open_Sandbox_Issues</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>Date_Reported__c</columns>
    <columns>Primary_Object__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Original_Reporter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request__c</field>
        <operation>equals</operation>
        <value>Ongoing: Sandbox Updates</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>1 - Reported,2 - Fix in Progress,3 - Testing,4 - Approved,5 - Promoted</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>6 - Communicated,Monitoring</value>
    </filters>
    <label>Open Sandbox Issues</label>
    <language>en_US</language>
    <sharedTo>
        <group>SFDCAdminAccount</group>
    </sharedTo>
</ListView>