force-app/main/default/objects/Workstream__c/listViews/Reported_Scoping.listView-meta.xml
<ListView>
    <fullName>Reported_Scoping</fullName>
    <columns>Responsible_Party__c</columns>
    <columns>NAME</columns>
    <columns>Primary_Object__c</columns>
    <columns>Status__c</columns>
    <columns>Severity__c</columns>
    <columns>Priority__c</columns>
    <columns>Date_Deployment__c</columns>
    <columns>Date_of_Update__c</columns>
    <columns>Date_Reported__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>1 - Reported,2 - Investigating/Scoping</value>
    </filters>
    <label>Reported &amp; Scoping</label>
    <language>en_US</language>
</ListView>