force-app/main/default/objects/Workstream__c/listViews/Resolved_Issues.listView-meta.xml
<ListView>
    <fullName>Resolved_Issues</fullName>
    <columns>NAME</columns>
    <columns>Date_Resolved__c</columns>
    <columns>Primary_Object__c</columns>
    <columns>Status__c</columns>
    <columns>Severity__c</columns>
    <columns>Priority__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Responsible_Party__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>10 - Resolved</value>
    </filters>
    <label>Resolved Issues</label>
    <language>en_US</language>
</ListView>