force-app/main/default/objects/Workstream__c/listViews/ULS_Stuff.listView-meta.xml
<ListView>
    <fullName>ULS_Stuff</fullName>
    <columns>NAME</columns>
    <columns>Responsible_Party__c</columns>
    <columns>Requires_Test_Script__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Process_Flow__c</columns>
    <columns>Alternate_Flow_s__c</columns>
    <columns>Testing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ULS</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>10 - Resolved</value>
    </filters>
    <label>ULS Stuff</label>
    <language>en_US</language>
</ListView>